apps/demo/neural-reflex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neural-web-svc
  namespace: demo
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.111.60
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: neural-web
